# confidence-escalation

./: ADOPTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/skills/: add-confidence-adapter.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-framework-adapter.md
.github/workflows/: ci.yml
examples/: basic_confidence_gate.py  eu_ai_act_art14_compliance.py
src/confidence_escalation/: __init__.py  handlers.py  middleware.py  policy.py  scorer.py
src/confidence_escalation/adapters/: __init__.py  autogen.py  crewai.py  google_adk.py  langchain.py  openai_agents.py  pydantic_ai.py
tests/: test_handlers.py  test_middleware.py  test_openai_agents_adapter.py  test_policy.py  test_pydantic_ai_adapter.py  test_scorer.py
